--- a/.lando.sample.yml
+++ b/.lando.sample.yml
@@ -1,8 +1,10 @@
 name: laracon
 recipe: laravel
+
 excludes:
   - vendor # Performance increase because file changes are only synced on composer commands and restarts/rebuilds.
   - node_modules # If you manually edit these files, your application will not see the edits.
+
 config:
   webroot: public
   via: nginx
@@ -16,13 +18,17 @@ proxy:
     - mail.laracon.lndo.site # I like using this because it's easy to remember.
   appserver_nginx:
     - laracon.test # If you want to use .test, you can, but you need to do your own DNS entry
-    - laracon.lndo.site # If you specify a domain, then you can also specify .lndo.site, but not required.
+    - laracon.lndo.site # If you specify a proxy, then you must add the .lndo.site domain IF you want to use it.
 
 services:
   node:
     type: node:16
+    build: # This build step is optional, but why not automate it?
+      - npm install
+      - npm run dev
   mailhog:
     type: mailhog
+    ssl: true
     portforward: true # Generates a random localhost:port url on each restart. Specify port, or set up a proxy url.
     hogfrom: # Probably the coolest configuration key ever.
       - appserver
