--- a/.env.example
+++ b/.env.example
@@ -6,19 +6,15 @@ DB_DATABASE=laravel
 DB_USERNAME=postgres
 DB_PASSWORD=postgres
 REDIS_HOST=cache
-CACHE_DRIVER=redis
-QUEUE_CONNECTION=redis
+
 
 MAIL_MAILER=smtp
 MAIL_HOST=mailhog
 MAIL_PORT=1025
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS=no-reply@laracon.lndo.site
-MAIL_FROM_NAME="${APP_NAME}"
 
-# If we used the MySQL or MariaDB services isntead of Postgres:
+
+# If we used the MySQL or MariaDB services instead of Postgres:
 #DB_CONNECTION=mysql
 #DB_HOST=database
 #DB_PORT=3306
@@ -39,6 +35,11 @@ BROADCAST_DRIVER=log
 FILESYSTEM_DRIVER=local
 SESSION_DRIVER=redis
 SESSION_LIFETIME=120
+CACHE_DRIVER=redis
+QUEUE_CONNECTION=redis
 
 REDIS_PASSWORD=null
 REDIS_PORT=6379
+
+MAIL_FROM_ADDRESS=no-reply@laracon.lndo.site
+MAIL_FROM_NAME="${APP_NAME}"
